Update and rename Cricket2.html to cricket2.html

--- a/cricket2.html
+++ b/cricket2.html
@@ -25,7 +25,7 @@ If you loose your gear click on the links below to order some :)
 
 <a href="https://www.allroundercricket.com/au/" target=”_blank”> All Rounder </a> <br> <br>
 
-<a href="file:///C:/Users/makadiak29/OneDrive%20-%20Padua%20College/Desktop/How%20to%20play%20Cricket.html"> Click here to go back to Page 1 </a> 
+<a href="index.html"> Click here to go back to Page 1 </a> 
 
 
 <body bgcolor= "#2EE818">
