--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@ How to play cricket
 </font size="4" color="white" face="courier">
 
 
-<a href="Cricket2.html">
-<p>CLICK HERE OF YOU LOST YOUR GEAR</p>
+<a href="cricket2.html">CLICK HERE OF YOU LOST YOUR GEAR</a>
 
 
 </font>
